fix datepicker z-index

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -64,3 +64,4 @@ button.submit-search.searching::after {
 
   }
 }
+.ui-datepicker{ z-index: 3 !important;}
